tests/broken/stray-else.stderr
error: Unexpected 'else' statement
 --> tests/broken/stray-else.rs:4:31
  |
4 | #[oxiplate = "{{ action }}{%- else -%}"]
  |                               ^^^^
